Upgraded to Java 11, fixed warnings, formatting and replacing final variables with vars.